syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";
package CareerCloud.gRPC;

service CompanyLocation{
	rpc GetCompanyLocation(CompLocIdRequest) returns (CompLocProto);
    rpc GetAllCompanyLocation(google.protobuf.Empty) returns(CompLocArray);
	rpc CreateCompanyLocation(CompLocArray) returns (google.protobuf.Empty);
	rpc UpdateCompanyLocation(CompLocArray) returns (google.protobuf.Empty);
	rpc DeleteCompanyLocation(CompLocArray) returns (google.protobuf.Empty);
}
message CompLocIdRequest{
	string Id = 1;
}
message CompLocProto{
    string Id = 1;
    string Company = 2;
    string CountryCode = 3;
    string Province = 4;
    string Street = 5;
    string City = 6;
    string PostalCode = 7;
}
message CompLocArray{
    repeated CompLocProto CompLoc = 1;
}